--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "gulp-autoprefixer": "^2.1.0",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^1.3.3",
-    "gulp-cssimport": "^1.3.1",
     "gulp-watch": "^4.1.1",
     "rimraf": "^2.3.1"
+  },
+  "devDependencies": {
+    "gulp-concat-css": "^2.2.0",
+    "gulp-import-css": "^0.1.2"
   }
 }
