--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "rimraf": "^2.3.1"
   },
   "devDependencies": {
-    "gulp-concat-css": "^2.2.0",
-    "gulp-import-css": "^0.1.2"
+    "gulp-cssimport": "^1.3.1"
   }
 }
